--- a/monitoring_broker/status_scraper.cfg
+++ b/monitoring_broker/status_scraper.cfg
@@ -17,7 +17,7 @@ scrape_bad_match_1 = red
 percent=90
 
 [service SAM]
-subservices = darkside_sam gm2_sam lbne_sam minerva_sam minos_sam nova_sam uboone_sam
+subservices = coupp_sam darkside_sam gm2_sam holometer_sam lbne_sam minerva_sam minos_sam mu2e_sam nova_sam numix_sam seaquest_sam uboone_sam
 subservices_off =  cdf_sam dzero_sam 
 
 [service darkside_sam]
@@ -126,3 +126,78 @@ scrape_regex = <tr><td>uboone</td><td>prd</td><td>fts</td><td>.*?<span class="(.
 scrape_match_1 = ok
 scrape_bad_match_1 = bad
 
+[service coupp_sam]
+subservices=coupp_samweb  
+
+[service coupp_samweb]
+scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/service
+scrape_regex = <tr><td>coupp</td><td>prd</td><td>samweb</td><td>.*?<span class="(.*?)"
+
+scrape_match_1 = ok
+scrape_bad_match_1 = failed
+
+[service coupp_fts]
+scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/service
+scrape_regex = <tr><td>coupp</td><td>prd</td><td>fts</td><td>.*?<span class="(.*?)"
+scrape_match_1 = ok
+scrape_bad_match_1 = bad
+[service holometer_sam]
+subservices=holometer_samweb  
+
+[service holometer_samweb]
+scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/service
+scrape_regex = <tr><td>holometer</td><td>prd</td><td>samweb</td><td>.*?<span class="(.*?)"
+
+scrape_match_1 = ok
+scrape_bad_match_1 = failed
+
+[service holometer_fts]
+scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/service
+scrape_regex = <tr><td>holometer</td><td>prd</td><td>fts</td><td>.*?<span class="(.*?)"
+scrape_match_1 = ok
+scrape_bad_match_1 = bad
+[service mu2e_sam]
+subservices=mu2e_samweb  
+
+[service mu2e_samweb]
+scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/service
+scrape_regex = <tr><td>mu2e</td><td>prd</td><td>samweb</td><td>.*?<span class="(.*?)"
+
+scrape_match_1 = ok
+scrape_bad_match_1 = failed
+
+[service mu2e_fts]
+scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/service
+scrape_regex = <tr><td>mu2e</td><td>prd</td><td>fts</td><td>.*?<span class="(.*?)"
+scrape_match_1 = ok
+scrape_bad_match_1 = bad
+[service numix_sam]
+subservices=numix_samweb  
+
+[service numix_samweb]
+scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/service
+scrape_regex = <tr><td>numix</td><td>prd</td><td>samweb</td><td>.*?<span class="(.*?)"
+
+scrape_match_1 = ok
+scrape_bad_match_1 = failed
+
+[service numix_fts]
+scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/service
+scrape_regex = <tr><td>numix</td><td>prd</td><td>fts</td><td>.*?<span class="(.*?)"
+scrape_match_1 = ok
+scrape_bad_match_1 = bad
+[service seaquest_sam]
+subservices=seaquest_samweb  
+
+[service seaquest_samweb]
+scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/service
+scrape_regex = <tr><td>seaquest</td><td>prd</td><td>samweb</td><td>.*?<span class="(.*?)"
+
+scrape_match_1 = ok
+scrape_bad_match_1 = failed
+
+[service seaquest_fts]
+scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/service
+scrape_regex = <tr><td>seaquest</td><td>prd</td><td>fts</td><td>.*?<span class="(.*?)"
+scrape_match_1 = ok
+scrape_bad_match_1 = bad
