--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -1,1 +1,9 @@
-[default]
+
+[global]
+#log.screen = True
+log.access_file = "/home/poms/private/logs/poms/access_log"
+log.error_file = "/home/poms/private/logs/poms/error_log"
+
+server.socket_host = '0.0.0.0'
+server.socket_port = 8080
+
