all checked in?

--- a/monitoring_broker/status_scraper.cfg
+++ b/monitoring_broker/status_scraper.cfg
@@ -21,7 +21,7 @@ subservices = coupp_sam darkside_sam gm2_sam holometer_sam lbne_sam minerva_sam 
 subservices_off =  cdf_sam dzero_sam 
 
 [service darkside_sam]
-subservices=darkside_samweb  
+subservices=darkside_samweb darkside_fts
 
 [service darkside_samweb]
 scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/service
@@ -36,7 +36,7 @@ scrape_match_1 = ok
 scrape_bad_match_1 = bad
 
 [service gm2_sam]
-subservices=gm2_samweb  
+subservices=gm2_samweb gm2_fts
 
 [service gm2_samweb]
 scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/service
@@ -51,7 +51,7 @@ scrape_match_1 = ok
 scrape_bad_match_1 = bad
 
 [service lbne_sam]
-subservices=lbne_samweb  
+subservices=lbne_samweb lbne_fts
 
 [service lbne_samweb]
 scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/service
@@ -66,7 +66,7 @@ scrape_match_1 = ok
 scrape_bad_match_1 = bad
 
 [service minerva_sam]
-subservices=minerva_samweb  
+subservices=minerva_samweb minerva_fts
 
 [service minerva_samweb]
 scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/service
@@ -81,7 +81,7 @@ scrape_match_1 = d
 scrape_bad_match_1 = bad
 
 [service minos_sam]
-subservices=minos_samweb  
+subservices=minos_samweb minos_fts
 
 [service minos_samweb]
 scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/service
@@ -96,7 +96,7 @@ scrape_match_1 = ok
 scrape_bad_match_1 = failed
 
 [service nova_sam]
-subservices=nova_samweb  
+subservices=nova_samweb nova_fts
 
 [service nova_samweb]
 scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/service
@@ -111,7 +111,7 @@ scrape_match_1 = ok
 scrape_bad_match_1 = failed
 
 [service uboone_sam]
-subservices=uboone_samweb  
+subservices=uboone_samweb uboone_fts
 
 [service uboone_samweb]
 scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/service
@@ -127,7 +127,7 @@ scrape_match_1 = ok
 scrape_bad_match_1 = bad
 
 [service coupp_sam]
-subservices=coupp_samweb  
+subservices=coupp_samweb coupp_fts
 
 [service coupp_samweb]
 scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/service
@@ -142,7 +142,7 @@ scrape_regex = <tr><td>coupp</td><td>prd</td><td>fts</td><td>.*?<span class="(.*
 scrape_match_1 = ok
 scrape_bad_match_1 = bad
 [service holometer_sam]
-subservices=holometer_samweb  
+subservices=holometer_samweb   holometer_fts
 
 [service holometer_samweb]
 scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/service
@@ -157,7 +157,7 @@ scrape_regex = <tr><td>holometer</td><td>prd</td><td>fts</td><td>.*?<span class=
 scrape_match_1 = ok
 scrape_bad_match_1 = bad
 [service mu2e_sam]
-subservices=mu2e_samweb  
+subservices=mu2e_samweb  mu2e_fts
 
 [service mu2e_samweb]
 scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/service
@@ -172,7 +172,7 @@ scrape_regex = <tr><td>mu2e</td><td>prd</td><td>fts</td><td>.*?<span class="(.*?
 scrape_match_1 = ok
 scrape_bad_match_1 = bad
 [service numix_sam]
-subservices=numix_samweb  
+subservices=numix_samweb numix_fts
 
 [service numix_samweb]
 scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/service
@@ -187,7 +187,7 @@ scrape_regex = <tr><td>numix</td><td>prd</td><td>fts</td><td>.*?<span class="(.*
 scrape_match_1 = ok
 scrape_bad_match_1 = bad
 [service seaquest_sam]
-subservices=seaquest_samweb  
+subservices=seaquest_samweb seaquest_fts
 
 [service seaquest_samweb]
 scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/service
