--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -1,9 +1,10 @@
 
 [global]
 #log.screen = True
-log.access_file = "/home/poms/private/logs/poms/access_log"
-log.error_file = "/home/poms/private/logs/poms/error_log"
+log.rot_error_file = "/home/poms/private/logs/poms/error_log"
+log.rot_access_file = "/home/poms/private/logs/poms/access_log"
+log.rot_maxBytes = 10000000
+log.rot_backupCount = 100
 
 server.socket_host = '0.0.0.0'
 server.socket_port = 8080
-
