Added DB parms.

--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -8,3 +8,8 @@ log.rot_backupCount = 100
 
 server.socket_host = '0.0.0.0'
 server.socket_port = 8080
+
+db="pomsdev"
+dbuser="pomsdbs"
+dbhost="cspgsdev.fnal.gov"
+dbport="5437"
