--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -3,7 +3,7 @@
 #log.screen = True
 log.rot_error_file = "/home/poms/private/logs/poms/error_log"
 log.rot_access_file = "/home/poms/private/logs/poms/access_log"
-log.pidfile = "/home/poms/private/logs/poms/pid.log"
+log.pidfile = "/home/poms/private/logs/poms/poms.pid"
 log.rot_maxBytes = 10000000
 log.rot_backupCount = 100
 
