Added an SSL server.

--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -1,14 +1,18 @@
-
 [global]
+
 #log.screen = True
-log.rot_error_file = "/home/poms/private/logs/poms/error_log"
-log.rot_access_file = "/home/poms/private/logs/poms/access_log"
-log.pidfile = "/home/poms/private/logs/poms/pid.log"
+
+log.rot_error_file = "/home/poms/private/logs/poms/error.log"
+log.rot_access_file = "/home/poms/private/logs/poms/access.log"
 log.rot_maxBytes = 10000000
 log.rot_backupCount = 100
 
 server.socket_host = '0.0.0.0'
 server.socket_port = 8080
+
+sslserver.socket_port = 8443
+sslserver.ssl_certificate = '/home/poms/private/cert/poms/new.cert.cert'
+sslserver.ssl_private_key = '/home/poms/private/cert/poms/new.cert.key'
 
 db="pomsdev"
 dbuser="pomsdbs"
