scrape muliple pages for DCache

--- a/monitoring_broker/status_scraper.cfg
+++ b/monitoring_broker/status_scraper.cfg
@@ -1,12 +1,24 @@
+[global]
+debug=0
 
 [service All]
 subservices = DCache Enstore SAM
 
 [service DCache]
+subservices = DCache_transfers DCache_doors
+
+[service DCache_transfers]
 scrape_url =  http://fndca3a.fnal.gov:2288/context/transfers.html
 scrape_regex =   class="([a-z]*)"
 scrape_bad_match_1 = missing
 scrape_match_1 = speed
+percent=90
+
+[service DCache_doors]
+scrape_url =  http://fndca3a.fnal.gov:2288/webadmin/cellinfo
+scrape_regex = \<span\>(.....).*\</span\>
+scrape_bad_match_1 = not r
+scrape_match_1 = GFTP-
 percent=90
 
 [service Enstore]
