--- a/monitoring_broker/status_scraper.cfg
+++ b/monitoring_broker/status_scraper.cfg
@@ -5,7 +5,7 @@ debug=0
 subservices = DCache Enstore SAM
 
 [service DCache]
-subservices = DCache_transfers DCache_doors
+subservices = DCache_transfers DCache_queued_transfers DCache_doors
 
 [service DCache_transfers]
 scrape_url =  http://fndca3a.fnal.gov:2288/context/transfers.html
@@ -13,6 +13,13 @@ scrape_regex =   class="([a-z]*)"
 scrape_bad_match_1 = missing
 scrape_match_1 = speed
 percent=90
+
+[service DCache_queued_transfers]
+scrape_url =  http://fndca3a.fnal.gov:2288/context/transfers.html
+scrape_regex =   <td class="state">([A-Z]*)</td>
+scrape_bad_match_1 = QUEUED
+scrape_match_1 = RUNNING
+percent=30
 
 [service DCache_doors]
 scrape_url =  http://fndca3a.fnal.gov:2288/webadmin/cellinfo
