now we show who is logged in via shibboleth

--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -10,9 +10,11 @@ log.rot_backupCount = 100
 server.socket_host = '0.0.0.0'
 server.socket_port = 8080
 
-sslserver.socket_port = 8443
-sslserver.ssl_certificate = '/home/poms/private/cert/poms/new.cert.cert'
-sslserver.ssl_private_key = '/home/poms/private/cert/poms/new.cert.key'
+# proxying through apache on port 443 now, so no need for this...
+#
+#sslserver.socket_port = 8443
+#sslserver.ssl_certificate = '/home/poms/private/cert/poms/new.cert.cert'
+#sslserver.ssl_private_key = '/home/poms/private/cert/poms/new.cert.key'
 
 db="pomsdev"
 dbuser="pomsdbs"
