oops reverting back to normal

--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -1,21 +1,24 @@
 [global]
-
+	
 #log.screen = True
-log.rot_error_file = "/home/poms/Gheith2/private/logs/poms/error_log"
-log.rot_access_file = "/home/poms/Gheith2/private/logs/poms/access_log"
-log.pidfile = "/home/poms/Gheith2/private/logs/poms/poms.pid"
+log.rot_error_file = "/home/poms/private/logs/poms/error_log"
+log.rot_access_file = "/home/poms/private/logs/poms/access_log"
+log.pidfile = "/home/poms/private/logs/poms/poms.pid"
 log.rot_maxBytes = 10000000
 log.rot_backupCount = 100
+	
 
 server.socket_host = '0.0.0.0'
-server.socket_port = 8085
+server.socket_port = 8080
 
-sslserver.socket_port = 8444
-sslserver.ssl_certificate = '/home/poms/private/cert/poms/new.cert.cert'
-sslserver.ssl_private_key = '/home/poms/private/cert/poms/new.cert.key'
-
+# proxying through apache on port 443 now, so no need for this...
+#
+#sslserver.socket_port = 8443
+#sslserver.ssl_certificate = '/home/poms/private/cert/poms/new.cert.cert'
+#sslserver.ssl_private_key = '/home/poms/private/cert/poms/new.cert.key'
+	
+	
 db="pomsdev"
 dbuser="pomsdbs"
 dbhost="cspgsdev.fnal.gov"
 dbport="5437"
-
