--- a/monitoring_broker/status_scraper.cfg
+++ b/monitoring_broker/status_scraper.cfg
@@ -1,5 +1,5 @@
 [global]
-debug=0
+debug=1
 
 [service All]
 subservices = DCache Enstore SAM FifeBatch
@@ -22,28 +22,32 @@ scrape_url =  http://fndca3a.fnal.gov:2288/context/transfers.html
 scrape_regex =   class="([a-z]*)"
 scrape_bad_match_1 = missing
 scrape_match_1 = speed
-percent=90
+warnpercent=80
+percent=95
 
 [service DCache_queued_transfers]
 scrape_url =  http://fndca3a.fnal.gov:2288/context/transfers.html
 scrape_regex =   <td class="state">([A-Z]*)</td>
 scrape_bad_match_1 = QUEUED
 scrape_match_1 = RUNNING
-percent=30
+warnpercent=50
+percent=95
 
 [service DCache_doors]
 scrape_url =  http://fndca3a.fnal.gov:2288/webadmin/cellinfo
 scrape_regex = \<span\>(.....).*\</span\>
 scrape_bad_match_1 = not r
 scrape_match_1 = GFTP-
-percent=90
+warnpercent=80
+percent=95
 
 [service Enstore]
 scrape_url =  http://www-stken.fnal.gov/enstore/enstore_saag.html
 scrape_regex  = IMG.src="([a-z]*)ball.gif"
 scrape_match_1 = green
 scrape_bad_match_1 = red
-percent=90
+warnpercent=60
+percent=95
 
 [service SAM]
 subservices = coupp_sam darkside_sam gm2_sam holometer_sam lbne_sam minerva_sam minos_sam mu2e_sam nova_sam numix_sam seaquest_sam uboone_sam
