--- a/monitoring_broker/status_scraper.cfg
+++ b/monitoring_broker/status_scraper.cfg
@@ -2,12 +2,15 @@
 debug=1
 
 [service All]
+description = Bundle of all services we watch 
 subservices = DCache Enstore SAM FifeBatch
 
 [service FifeBatch]
+description = Fifebatch relatd services status
 subservices = FifeBatch_web
 
 [service FifeBatch_web]
+description = Scanning fifebatch webservice, currently just to see if it is up.
 scrape_url = https://fifebatch.fnal.gov:8443/jobsub/version/
 scrape_regex = (out)
 scrape_bad_match_1 = wrong
@@ -15,9 +18,11 @@ scrape_match_1 = out
 percent=100
 
 [service DCache]
+description = Various DCache checks
 subservices = DCache_transfers DCache_queued_transfers DCache_doors
 
 [service DCache_transfers]
+description = Checks Dcache Transfer page for percentage not showing a trasfer rate -- warns at 80% fails at 95% 
 scrape_url =  http://fndca3a.fnal.gov:2288/context/transfers.html
 scrape_regex =   class="([a-z]*)"
 scrape_bad_match_1 = missing
@@ -26,6 +31,7 @@ warnpercent=80
 percent=95
 
 [service DCache_queued_transfers]
+description = Checks Dcache Transfer page for percentage showing queued transfers -- warns at 50%, fails at 95%
 scrape_url =  http://fndca3a.fnal.gov:2288/context/transfers.html
 scrape_regex =   <td class="state">([A-Z]*)</td>
 scrape_bad_match_1 = QUEUED
@@ -34,6 +40,7 @@ warnpercent=50
 percent=95
 
 [service DCache_doors]
+description = Checks Dcache CellInfo page for doors not pingable, warns at 80%, fails at 95%
 scrape_url =  http://fndca3a.fnal.gov:2288/webadmin/cellinfo
 scrape_regex = \<span\>(.....).*\</span\>
 scrape_bad_match_1 = not r
@@ -42,6 +49,7 @@ warnpercent=80
 percent=95
 
 [service Enstore]
+description = Checks Enstore status page for Red vs Green balls, warns at 60%, fails at 95%
 scrape_url =  http://www-stken.fnal.gov/enstore/enstore_saag.html
 scrape_regex  = IMG.src="([a-z]*)ball.gif"
 scrape_match_1 = green
