mellow out DCache reporting slightly

--- a/monitoring_broker/status_scraper.cfg
+++ b/monitoring_broker/status_scraper.cfg
@@ -22,6 +22,8 @@ percent=100
 [service DCache]
 description = Various DCache checks
 subservices = DCache_transfers DCache_queued_transfers DCache_doors
+warnpercent=95
+percent=50
 
 [service DCache_transfers]
 description = Checks Dcache Transfer page for percentage not showing a trasfer rate -- warns at 95%% fails at 80%% 
