fun with startup stuff

--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -6,8 +6,8 @@ log.rot_access_file = "/home/poms/private/logs/poms/access_log"
 log.pidfile = "/home/poms/private/logs/poms/poms.pid"
 log.rot_maxBytes = 10000000
 log.rot_backupCount = 100
+log.screen = False
 	
-
 server.socket_host = '0.0.0.0'
 server.socket_port = 8080
 
@@ -16,7 +16,6 @@ server.socket_port = 8080
 #sslserver.socket_port = 8443
 #sslserver.ssl_certificate = '/home/poms/private/cert/poms/new.cert.cert'
 #sslserver.ssl_private_key = '/home/poms/private/cert/poms/new.cert.key'
-	
 	
 db="pomsdev"
 dbuser="pomsdbs"
