--- a/monitoring_broker/status_scraper.cfg
+++ b/monitoring_broker/status_scraper.cfg
@@ -76,7 +76,7 @@ scrape_bad_match_1 = failed
 
 [service darkside_fts]
 scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/darkside/prd
-scrape_regex = <tr><td>darkside</td><td>prd</td><td>fts</td><td>.*?<span class="(.*?)"
+scrape_regex = <tr><td>darkside</td><td>prd</td><td>fts</td><td><a href="http://darksidesam.*?<span class="(.*?)"
 scrape_match_1 = ok
 scrape_bad_match_1 = bad
 
@@ -91,7 +91,7 @@ scrape_bad_match_1 = failed
 
 [service gm2_fts]
 scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/gm2/prd
-scrape_regex = <tr><td>gm2</td><td>prd</td><td>fts</td><td>.*?<span class="(.*?)"
+scrape_regex = <tr><td>gm2</td><td>prd</td><td>fts</td><td><a href="http://gm2sam.*?<span class="(.*?)"
 scrape_match_1 = ok
 scrape_bad_match_1 = bad
 
@@ -121,7 +121,7 @@ scrape_bad_match_1 = failed
 
 [service minerva_fts]
 scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/minerva/prd
-scrape_regex = <tr><td>minerva</td><td>prd</td><td>fts</td><td>.*?<span class="(.*?)"
+scrape_regex = <tr><td>minerva</td><td>prd</td><td>fts</td><td><a href="http://samdfts.*?<span class="(.*?)"
 scrape_match_1 = d
 scrape_bad_match_1 = bad
 
@@ -136,7 +136,7 @@ scrape_bad_match_1 = failed
 
 [service minos_fts]
 scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/minos/prd
-scrape_regex = <tr><td>minos</td><td>prd</td><td>fts</td><td>.*?<span class="(.*?)"
+scrape_regex = <tr><td>minos</td><td>prd</td><td>fts</td><td><a href="http://minossam.*?<span class="(.*?)"
 scrape_match_1 = ok
 scrape_bad_match_1 = failed
 
@@ -151,7 +151,7 @@ scrape_bad_match_1 = failed
 
 [service nova_fts]
 scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/nova/prd
-scrape_regex = <tr><td>nova</td><td>prd</td><td>fts</td><td>.*?<span class="(.*?)"
+scrape_regex = <tr><td>nova</td><td>prd</td><td>fts</td><td><a href="http://novasam.*?<span class="(.*?)"
 scrape_match_1 = ok
 scrape_bad_match_1 = failed
 
@@ -167,7 +167,7 @@ scrape_bad_match_1 = failed
 
 [service uboone_fts]
 scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/uboone/prd
-scrape_regex = <tr><td>uboone</td><td>prd</td><td>fts</td><td>.*?<span class="(.*?)"
+scrape_regex = <tr><td>uboone</td><td>prd</td><td>fts</td><td><a href="http://uboonesam.*?<span class="(.*?)"
 scrape_match_1 = ok
 scrape_bad_match_1 = bad
 
@@ -183,7 +183,7 @@ scrape_bad_match_1 = failed
 
 [service coupp_fts]
 scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/coupp/prd
-scrape_regex = <tr><td>coupp</td><td>prd</td><td>fts</td><td>.*?<span class="(.*?)"
+scrape_regex = <tr><td>coupp</td><td>prd</td><td>fts</td><td><a href="http://couppsam.*?<span class="(.*?)"
 scrape_match_1 = ok
 scrape_bad_match_1 = bad
 [service holometer_sam]
@@ -198,7 +198,7 @@ scrape_bad_match_1 = failed
 
 [service holometer_fts]
 scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/holometer/prd
-scrape_regex = <tr><td>holometer</td><td>prd</td><td>fts</td><td>.*?<span class="(.*?)"
+scrape_regex = <tr><td>holometer</td><td>prd</td><td>fts</td><td><a href="http://holometersam.*?<span class="(.*?)"
 scrape_match_1 = ok
 scrape_bad_match_1 = bad
 [service mu2e_sam]
@@ -213,7 +213,7 @@ scrape_bad_match_1 = failed
 
 [service mu2e_fts]
 scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/mu2e/prd
-scrape_regex = <tr><td>mu2e</td><td>prd</td><td>fts</td><td>.*?<span class="(.*?)"
+scrape_regex = <tr><td>mu2e</td><td>prd</td><td>fts</td><td><a href="http://mu2esam.*?<span class="(.*?)"
 scrape_match_1 = ok
 scrape_bad_match_1 = bad
 [service numix_sam]
@@ -228,7 +228,7 @@ scrape_bad_match_1 = failed
 
 [service numix_fts]
 scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/numix/prd
-scrape_regex = <tr><td>numix</td><td>prd</td><td>fts</td><td>.*?<span class="(.*?)"
+scrape_regex = <tr><td>numix</td><td>prd</td><td>fts</td><td><a href="http://numixsam.*?<span class="(.*?)"
 scrape_match_1 = ok
 scrape_bad_match_1 = bad
 [service seaquest_sam]
@@ -243,6 +243,6 @@ scrape_bad_match_1 = failed
 
 [service seaquest_fts]
 scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/seaquest/prd
-scrape_regex = <tr><td>seaquest</td><td>prd</td><td>fts</td><td>.*?<span class="(.*?)"
+scrape_regex = <tr><td>seaquest</td><td>prd</td><td>fts</td><td><a href="http://seaquestsam.*?<span class="(.*?)"
 scrape_match_1 = ok
 scrape_bad_match_1 = bad
