--- a/monitoring_broker/status_scraper.cfg
+++ b/monitoring_broker/status_scraper.cfg
@@ -1,5 +1,5 @@
 [global]
-debug=0
+debug=1
 cert=/home/poms/private/gsi/pomscert.pem
 key=/home/poms/private/gsi/pomskey.pem
 
@@ -38,7 +38,7 @@ percent=80
 [service DCache_queued_transfers]
 description = Checks Dcache Transfer page for percentage showing queued transfers -- warns at 95%%, fails at 50%%
 scrape_url =  http://fndca3a.fnal.gov:2288/context/transfers.html
-scrape_regex =   <td class="sta[gt][inge]*">([A-Z]*)</td>
+scrape_regex =   <td class="sta[gt][ie][ng]*"[^>]*>([A-Za-z]*)</td>
 scrape_bad_match_1 = QUEUED
 scrape_match_1 = RUNNING
 scrape_match_1 = Staging
