make scanner executable

--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -24,6 +24,8 @@ dbuser="pomsdbs"
 dbhost="cspgsdev.fnal.gov"
 dbport="5437"
 
+ftsscandir="/home/poms/private/var/ftsscanner"
+
 request.show_tracebacks = False
 
 pomspath='/poms'
