--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -12,6 +12,7 @@ log.screen = False
 #server.socket_host = '127.0.0.1'
 server.socket_host = '0.0.0.0'
 server.socket_port = 8080
+server.thread_pool = 20
 
 # proxying through apache on port 443 now, so no need for this...
 #
@@ -32,3 +33,4 @@ pomspath='/poms'
 
 [/]
 tools.gzip.on: True
+
