--- a/monitoring_broker/fifemon_reader.cfg
+++ b/monitoring_broker/fifemon_reader.cfg
@@ -1,6 +1,6 @@
 [global]
 debug=0
-passwdcfg=passwd.ini
+paswdcfg=/home/poms/private/config/poms/fifemon_passwd.ini
 fifemon_url=https://fifemon.fnal.gov/monitor
 
 [service All]
