changes from dev box, esp reporting cpu time changes

--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -27,7 +27,7 @@ dbport="5437"
 
 ftsscandir="/home/poms/private/var/ftsscanner"
 
-request.show_tracebacks = False
+request.show_tracebacks = True
 
 pomspath='/poms'
 
