added dcache scratch write rate...

--- a/monitoring_broker/fifemon_reader.cfg
+++ b/monitoring_broker/fifemon_reader.cfg
@@ -5,7 +5,13 @@ fifemon_url=https://fifemon.fnal.gov/monitor
 
 [service All]
 description = Bundle of all services we watch 
-subservices = fifemon_SAM fifemon_FifeBatch
+subservices = fifemon_SAM fifemon_FifeBatch fifemon_DCache
+
+[service fifemon_DCache]
+description = Good write rates to SAM scratch
+path = dh.rates.dcache.scratch.write.rate
+source_url=https://fifemon.fnal.gov/monitor/dashboard/db/dcache-overview
+below = 1024000
 
 [service fifemon_FifeBatch]
 description = Fifebatch related services status
