fifemon_reader update

--- a/monitoring_broker/fifemon_reader.cfg
+++ b/monitoring_broker/fifemon_reader.cfg
@@ -8,10 +8,20 @@ description = Bundle of all services we watch
 subservices = fifemon_SAM fifemon_FifeBatch fifemon_DCache
 
 [service fifemon_DCache]
+description = DCache is working
+subservices = fifemon_DCache_scratch_write_rate fifemon_DCache_scratch_read_rate
+
+[service fifemon_DCache_scratch_write_rate]
 description = Good write rates to SAM scratch
 path = dh.rates.dcache.scratch.write.rate
 source_url=https://fifemon.fnal.gov/monitor/dashboard/db/dcache-overview
-below = 1024000
+above = 1024000
+
+[service fifemon_DCache_scratch_write_rate]
+description = Good write rates to SAM scratch
+path = dh.rates.dcache.scratch.read.rate
+source_url=https://fifemon.fnal.gov/monitor/dashboard/db/dcache-overview
+above = 1024000
 
 [service fifemon_FifeBatch]
 description = Fifebatch related services status
