--- a/monitoring_broker/fifemon_reader.cfg
+++ b/monitoring_broker/fifemon_reader.cfg
@@ -17,8 +17,8 @@ path = dh.rates.dcache.scratch.write.rate
 source_url=https://fifemon.fnal.gov/monitor/dashboard/db/dcache-overview
 above = 1024000
 
-[service fifemon_DCache_scratch_write_rate]
-description = Good write rates to SAM scratch
+[service fifemon_DCache_scratch_read_rate]
+description = Good read rates to SAM scratch
 path = dh.rates.dcache.scratch.read.rate
 source_url=https://fifemon.fnal.gov/monitor/dashboard/db/dcache-overview
 above = 1024000
