--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -24,6 +24,7 @@ db="pomsdev"
 dbuser="pomsdbs"
 dbhost="cspgsdev.fnal.gov"
 dbport="5437"
+sa_echo=False
 
 ftsscandir="/home/poms/private/var/ftsscanner"
 
