monitoring scraper touchup and new task getter

--- a/monitoring_broker/status_scraper.cfg
+++ b/monitoring_broker/status_scraper.cfg
@@ -1,250 +1,18 @@
 [global]
-debug=0
+debug=1
 cert=/home/poms/private/gsi/pomscert.pem
 key=/home/poms/private/gsi/pomskey.pem
 
 [service All]
 description = Bundle of all services we watch 
-subservices = DCache Enstore SAM FifeBatch
+subservices = fndca_DCache
 
-[service FifeBatch]
-description = Fifebatch relatd services status
-subservices = FifeBatch_web
 
-[service FifeBatch_web]
-description = Scanning fifebatch webservice, currently just to see if it is up.
-scrape_url = https://fifebatch.fnal.gov:8443/jobsub/version/
-scrape_regex = (out)
-scrape_bad_match_1 = wrong
-scrape_match_1 = out
+[service fndca_DCache]
+description = All dcache persistent pools have room
+scrape_url = http://fndca3a.fnal.gov/cgi-bin/du_cgi.py
+scrape_regex = td.*([ \d])\d\.\d
+scrape_bad_match_1 = 9
+scrape_match_1 = 
 percent=100
 
-[service DCache]
-description = Various DCache checks
-subservices = DCache_transfers DCache_queued_transfers DCache_doors
-warnpercent=95
-percent=50
-
-[service DCache_transfers]
-description = Checks Dcache Transfer page for percentage not showing a trasfer rate or staging -- warns at 95%% fails at 80%% 
-scrape_url =  http://fndca3a.fnal.gov:2288/context/transfers.html
-scrape_regex =   class="([a-z]*)"
-scrape_bad_match_1 = missing
-scrape_match_1 = speed
-scrape_match_2 = staging
-warnpercent=95
-percent=80
-
-[service DCache_queued_transfers]
-description = Checks Dcache Transfer page for percentage showing queued transfers -- warns at 95%%, fails at 50%%
-scrape_url =  http://fndca3a.fnal.gov:2288/context/transfers.html
-scrape_regex =   <td class="sta[gt][ie][ng]*"[^>]*>([A-Za-z]*)</td>
-scrape_bad_match_1 = QUEUED
-scrape_match_1 = RUNNING
-scrape_match_1 = Staging
-warnpercent=95
-percent=50
-
-[service DCache_doors]
-description = Checks Dcache CellInfo page for doors not pingable, warns at 95%%, fails at 80%%
-scrape_url =  http://fndca3a.fnal.gov:2288/webadmin/cellinfo
-scrape_regex = <span>(.....).*</span>
-scrape_bad_match_1 = not r
-scrape_match_1 = GFTP-
-warnpercent=95
-percent=80
-
-[service Enstore]
-description = Checks Enstore status page for Red vs Green balls, warns at 95%%, fails at 60%%
-scrape_url =  http://www-stken.fnal.gov/enstore/enstore_saag.html
-scrape_regex  = IMG.src="([a-z]*)ball.gif"
-scrape_match_1 = green
-scrape_bad_match_1 = red
-warnpercent=95
-percent=60
-
-[service SAM]
-subservices = coupp_sam darkside_sam gm2_sam holometer_sam lbne_sam minerva_sam minos_sam mu2e_sam nova_sam numix_sam seaquest_sam uboone_sam
-subservices_off =  cdf_sam dzero_sam 
-
-[service darkside_sam]
-subservices=darkside_samweb darkside_fts
-
-[service darkside_samweb]
-scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/darkside/prd
-scrape_regex = <tr><td>darkside</td><td>prd</td><td>samweb</td><td>.*?<span class="(.*?)"
-scrape_match_1 = ok
-scrape_bad_match_1 = failed
-
-[service darkside_fts]
-scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/darkside/prd
-scrape_regex = <tr><td>darkside</td><td>prd</td><td>fts</td><td><a href="http://darksidesam.*?<span class="(.*?)"
-scrape_match_1 = ok
-scrape_bad_match_1 = bad
-
-[service gm2_sam]
-subservices=gm2_samweb gm2_fts
-
-[service gm2_samweb]
-scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/gm2/prd
-scrape_regex = <tr><td>gm2</td><td>prd</td><td>samweb</td><td>.*?<span class="(.*?)"
-scrape_match_1 = ok
-scrape_bad_match_1 = failed
-
-[service gm2_fts]
-scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/gm2/prd
-scrape_regex = <tr><td>gm2</td><td>prd</td><td>fts</td><td><a href="http://gm2sam.*?<span class="(.*?)"
-scrape_match_1 = ok
-scrape_bad_match_1 = bad
-
-[service lbne_sam]
-subservices=lbne_samweb lbne_fts
-
-[service lbne_samweb]
-scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/lbne/prd
-scrape_regex = <tr><td>lbne</td><td>prd</td><td>samweb</td><td>.*?<span class="(.*?)"
-scrape_match_1 = ok
-scrape_bad_match_1 = failed
-
-[service lbne_fts]
-scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/lbne/prd
-scrape_regex = <tr><td>lbne</td><td>prd</td><td>fts</td><td>.*?<span class="(.*?)"
-scrape_match_1 = ok
-scrape_bad_match_1 = bad
-
-[service minerva_sam]
-subservices=minerva_samweb minerva_fts
-
-[service minerva_samweb]
-scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/minerva/prd
-scrape_regex = <tr><td>minerva</td><td>prd</td><td>samweb</td><td>.*?<span class="(.*?)"
-scrape_match_1 = ok
-scrape_bad_match_1 = failed
-
-[service minerva_fts]
-scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/minerva/prd
-scrape_regex = <tr><td>minerva</td><td>prd</td><td>fts</td><td><a href="http://samdfts.*?<span class="(.*?)"
-scrape_match_1 = d
-scrape_bad_match_1 = bad
-
-[service minos_sam]
-subservices=minos_samweb minos_fts
-
-[service minos_samweb]
-scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/minos/prd
-scrape_regex = <tr><td>minos</td><td>prd</td><td>samweb</td><td>.*?<span class="(.*?)"
-scrape_match_1 = ok
-scrape_bad_match_1 = failed
-
-[service minos_fts]
-scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/minos/prd
-scrape_regex = <tr><td>minos</td><td>prd</td><td>fts</td><td><a href="http://minossam.*?<span class="(.*?)"
-scrape_match_1 = ok
-scrape_bad_match_1 = failed
-
-[service nova_sam]
-subservices=nova_samweb nova_fts
-
-[service nova_samweb]
-scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/nova/prd
-scrape_regex = <tr><td>nova</td><td>prd</td><td>samweb</td><td>.*?<span class="(.*?)"
-scrape_match_1 = ok
-scrape_bad_match_1 = failed
-
-[service nova_fts]
-scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/nova/prd
-scrape_regex = <tr><td>nova</td><td>prd</td><td>fts</td><td><a href="http://novasam.*?<span class="(.*?)"
-scrape_match_1 = ok
-scrape_bad_match_1 = failed
-
-[service uboone_sam]
-subservices=uboone_samweb uboone_fts
-
-[service uboone_samweb]
-scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/uboone/prd
-scrape_regex = <tr><td>uboone</td><td>prd</td><td>samweb</td><td>.*?<span class="(.*?)"
-
-scrape_match_1 = ok
-scrape_bad_match_1 = failed
-
-[service uboone_fts]
-scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/uboone/prd
-scrape_regex = <tr><td>uboone</td><td>prd</td><td>fts</td><td><a href="http://uboonesam.*?<span class="(.*?)"
-scrape_match_1 = ok
-scrape_bad_match_1 = bad
-
-[service coupp_sam]
-subservices=coupp_samweb coupp_fts
-
-[service coupp_samweb]
-scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/coupp/prd
-scrape_regex = <tr><td>coupp</td><td>prd</td><td>samweb</td><td>.*?<span class="(.*?)"
-
-scrape_match_1 = ok
-scrape_bad_match_1 = failed
-
-[service coupp_fts]
-scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/coupp/prd
-scrape_regex = <tr><td>coupp</td><td>prd</td><td>fts</td><td><a href="http://couppsam.*?<span class="(.*?)"
-scrape_match_1 = ok
-scrape_bad_match_1 = bad
-[service holometer_sam]
-subservices=holometer_samweb   holometer_fts
-
-[service holometer_samweb]
-scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/holometer/prd
-scrape_regex = <tr><td>holometer</td><td>prd</td><td>samweb</td><td>.*?<span class="(.*?)"
-
-scrape_match_1 = ok
-scrape_bad_match_1 = failed
-
-[service holometer_fts]
-scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/holometer/prd
-scrape_regex = <tr><td>holometer</td><td>prd</td><td>fts</td><td><a href="http://holometersam.*?<span class="(.*?)"
-scrape_match_1 = ok
-scrape_bad_match_1 = bad
-[service mu2e_sam]
-subservices=mu2e_samweb  mu2e_fts
-
-[service mu2e_samweb]
-scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/mu2e/prd
-scrape_regex = <tr><td>mu2e</td><td>prd</td><td>samweb</td><td>.*?<span class="(.*?)"
-
-scrape_match_1 = ok
-scrape_bad_match_1 = failed
-
-[service mu2e_fts]
-scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/mu2e/prd
-scrape_regex = <tr><td>mu2e</td><td>prd</td><td>fts</td><td><a href="http://mu2esam.*?<span class="(.*?)"
-scrape_match_1 = ok
-scrape_bad_match_1 = bad
-[service numix_sam]
-subservices=numix_samweb numix_fts
-
-[service numix_samweb]
-scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/numix/prd
-scrape_regex = <tr><td>numix</td><td>prd</td><td>samweb</td><td>.*?<span class="(.*?)"
-
-scrape_match_1 = ok
-scrape_bad_match_1 = failed
-
-[service numix_fts]
-scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/numix/prd
-scrape_regex = <tr><td>numix</td><td>prd</td><td>fts</td><td><a href="http://numixsam.*?<span class="(.*?)"
-scrape_match_1 = ok
-scrape_bad_match_1 = bad
-[service seaquest_sam]
-subservices=seaquest_samweb seaquest_fts
-
-[service seaquest_samweb]
-scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/seaquest/prd
-scrape_regex = <tr><td>seaquest</td><td>prd</td><td>samweb</td><td>.*?<span class="(.*?)"
-
-scrape_match_1 = ok
-scrape_bad_match_1 = failed
-
-[service seaquest_fts]
-scrape_url = http://samweb.fnal.gov:8480/sam_web_registry/seaquest/prd
-scrape_regex = <tr><td>seaquest</td><td>prd</td><td>fts</td><td><a href="http://seaquestsam.*?<span class="(.*?)"
-scrape_match_1 = ok
-scrape_bad_match_1 = bad
