--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -31,6 +31,7 @@ ftsscandir="/home/poms/private/var/ftsscanner"
 request.show_tracebacks = True
 
 pomspath='/poms'
+poms.launch_recovery_jobs = True
 
 [/]
 tools.gzip.on: True
