--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -27,7 +27,7 @@ dbport="5437"
 sa_echo=False
 
 ftsscandir="/home/poms/private/var/ftsscanner"
-
+cron_launches_logs_dir="/home/poms/private/logs/poms/launches/"
 request.show_tracebacks = True
 
 pomspath='/poms'
