--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -31,7 +31,9 @@ cron_launches_logs_dir="/home/poms/private/logs/poms/launches/"
 request.show_tracebacks = True
 
 pomspath='/poms'
-poms.launch_recovery_jobs = True
+# only turn this on on fermicloud045 for now...
+#poms.launch_recovery_jobs = True
+
 
 [/]
 tools.gzip.on: True
