made mail settings configurable

--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -34,6 +34,10 @@ pomspath='/poms'
 # only turn this on on fermicloud045 for now...
 #poms.launch_recovery_jobs = True
 
+[smtp]
+server = smtp.fnal.gov:25
+sender = poms@fnal.gov
+debug = 0
 
 [/]
 tools.gzip.on: True
