--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -35,8 +35,8 @@ pomspath='/poms'
 #poms.launch_recovery_jobs = True
 
 [smtp]
-server = smtp.fnal.gov:25
-sender = poms@fnal.gov
+server = "smtp.fnal.gov:25"
+sender = "poms@fnal.gov"
 debug = 0
 
 [/]
