made elasticsearch base url configurable

--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -34,6 +34,8 @@ pomspath='/poms'
 # only turn this on on fermicloud045 for now...
 #poms.launch_recovery_jobs = True
 
+elasticsearch_base_url = "https://fifemon-es.fnal.gov"
+
 [smtp]
 server = "smtp.fnal.gov:25"
 sender = "poms@fnal.gov"
