--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -36,6 +36,9 @@ pomspath='/poms'
 #poms.launch_recovery_jobs = True
 
 elasticsearch_base_url = "https://fifemon-es.fnal.gov"
+elasticsearch_cert = "/home/poms/private/elasticsearch/poms_pomsgpvm01_fnal_gov.crt"
+elasticsearch_key = "/home/poms/private/elasticsearch/poms_pomsgpvm01_fnal_gov.key"
+
 
 [smtp]
 server = "smtp.fnal.gov:25"
