--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -32,7 +32,8 @@ cron_launches_logs_dir="/home/poms/private/logs/poms/launches/"
 request.show_tracebacks = True
 
 pomspath='/poms'
-# only turn this on on fermicloud045 for now...
+# only turn this on on pomsgpvm01 for now...
+# otherwise multiple recovery jobs will get launched!
 #poms.launch_recovery_jobs = True
 
 elasticsearch_base_url = "https://fifemon-es.fnal.gov"
