--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -1,9 +1,9 @@
 [global]
 	
 #log.screen = True
-log.rot_error_file = "/home/poms/private/logs/poms/error_log"
-log.rot_access_file = "/home/poms/private/logs/poms/access_log"
-log.pidfile = "/home/poms/private/logs/poms/poms.pid"
+log.rot_error_file = "/cloud/login/ahandres/private/logs/poms/error_log"
+log.rot_access_file = "/cloud/login/ahandres/private/logs/poms/access_log"
+log.pidfile = "/cloud/login/ahandres/private/logs/poms/poms.pid"
 log.rot_maxBytes = 10000000
 log.rot_backupCount = 100
 log.screen = False
@@ -24,21 +24,15 @@ db="pomsdev"
 dbuser="pomsdbs"
 dbhost="cspgsdev.fnal.gov"
 dbport="5437"
-# usually leave sqlachemy query echo off..
 sa_echo=False
 
 ftsscandir="/home/poms/private/var/ftsscanner"
 cron_launches_logs_dir="/home/poms/private/logs/poms/launches/"
 request.show_tracebacks = True
 
-pomspath='/poms'
-# only turn this on on pomsgpvm01 for now...
-# otherwise multiple recovery jobs will get launched!
+pomspath='/poms_ahandres'
+# only turn this on on fermicloud045 for now...
 #poms.launch_recovery_jobs = True
-
-elasticsearch_base_url = "https://fifemon-es.fnal.gov"
-elasticsearch_cert = "/home/poms/private/elasticsearch/poms_pomsgpvm01_fnal_gov.crt"
-elasticsearch_key = "/home/poms/private/elasticsearch/poms_pomsgpvm01_fnal_gov.key"
 
 [smtp]
 server = "smtp.fnal.gov:25"
