update fifemon_reader for sso login for now; also use requests lib throughout.

--- a/monitoring_broker/fifemon_reader.cfg
+++ b/monitoring_broker/fifemon_reader.cfg
@@ -1,6 +1,6 @@
 [global]
 debug=0
-passwdcfg=passwd.ini
+passwdcfg=fifemon_passwd.ini
 fifemon_url=https://fifemon.fnal.gov/monitor
 
 [service All]
