--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -30,7 +30,7 @@ ftsscandir="/home/poms/private/var/ftsscanner"
 cron_launches_logs_dir="/home/poms/private/logs/poms/launches/"
 request.show_tracebacks = True
 
-pomspath='/poms_ahandres'
+pomspath='/poms'
 # only turn this on on fermicloud045 for now...
 #poms.launch_recovery_jobs = True
 
