fixup condor_log_parser

--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -23,7 +23,7 @@ server.thread_pool = 20
 db="pomsdev"
 dbuser="pomsdbs"
 dbhost="cspgsdev.fnal.gov"
-dbport="5437"
+dbport=5437
 sa_echo=False
 
 ftsscandir="/home/poms/private/var/ftsscanner"
