improving status for persistent disk usage watcher

--- a/monitoring_broker/fifemon_reader.cfg
+++ b/monitoring_broker/fifemon_reader.cfg
@@ -14,14 +14,16 @@ subservices = fifemon_DCache_scratch_write_rate fifemon_DCache_scratch_read_rate
 [service fifemon_DCache_scratch_write_rate]
 description = Good write rates to SAM scratch
 path = dh.rates.dcache.scratch.write.rate
-source_url=https://fifemon.fnal.gov/monitor/dashboard/db/dcache-overview
-above = 1024000
+source_url=https://fifemon.fnal.gov/monitor/dashboard/db/dcache-transfer-overview
+warnabove = 512000
+above = 102400
 
 [service fifemon_DCache_scratch_read_rate]
 description = Good read rates to SAM scratch
 path = dh.rates.dcache.scratch.read.rate
-source_url=https://fifemon.fnal.gov/monitor/dashboard/db/dcache-overview
-above = 1024000
+source_url=https://fifemon.fnal.gov/monitor/dashboard/db/dcache-transfer-overview
+warnabove = 512000
+above = 102400
 
 [service fifemon_FifeBatch]
 description = Fifebatch related services status
@@ -87,5 +89,4 @@ description=SAMWeb status for uboone,
 source_url=https://fifemon.fnal.gov/monitor/dashboard/db/experiment-overview
 path=urls.uboone-prd-samweb-uboone.http-code
 below=201
-
 
