--- a/monitoring_broker/status_scraper.cfg
+++ b/monitoring_broker/status_scraper.cfg
@@ -10,9 +10,157 @@ subservices = fndca_DCache
 
 [service fndca_DCache]
 description = All dcache persistent pools have room
+subservices = fndca_DCache_GM2 fndca_DCache_annie fndca_DCache_argoneut fndca_DCache_chips fndca_DCache_darkside fndca_DCache_des fndca_DCache_dune fndca_DCache_lariat fndca_DCache_lbne fndca_DCache_minerva fndca_DCache_minos fndca_DCache_mu2e fndca_DCache_nova fndca_DCache_sbnd fndca_DCache_uboone
+warnpercent = 5
+percent = 90
+
+[service fndca_DCache_GM2]
+description=area has space, warn at 80%% bad at 90%%
 scrape_url = http://fndca3a.fnal.gov/cgi-bin/du_cgi.py
-scrape_regex = td.*([ \d])\d\.\d
+multiline = True
+scrape_regex = (?s)<tr.*?>GM2<.*?>([ \d])\d*\.\d\d.*?</tr>
 scrape_bad_match_1 = 9
+scrape_warn_match_1 = 8
+scrape_match_1 = 
+percent=100
+
+[service fndca_DCache_annie]
+description=area has space, warn at 80%% bad at 90%%
+scrape_url = http://fndca3a.fnal.gov/cgi-bin/du_cgi.py
+multiline = True
+scrape_regex = (?s)<tr.*?>annie<.*?>([ \d])\d*\.\d\d.*?</tr>
+scrape_bad_match_1 = 9
+scrape_warn_match_1 = 8
+scrape_match_1 = 
+percent=100
+
+[service fndca_DCache_argoneut]
+description=area has space, warn at 80%% bad at 90%%
+scrape_url = http://fndca3a.fnal.gov/cgi-bin/du_cgi.py
+multiline = True
+scrape_regex = (?s)<tr.*?>argoneut<.*?>([ \d])\d*\.\d\d.*?</tr>
+scrape_bad_match_1 = 9
+scrape_warn_match_1 = 8
+scrape_match_1 = 
+percent=100
+
+[service fndca_DCache_chips]
+description=area has space, warn at 80%% bad at 90%%
+scrape_url = http://fndca3a.fnal.gov/cgi-bin/du_cgi.py
+multiline = True
+scrape_regex = (?s)<tr.*?>chips<.*?>([ \d])\d*\.\d\d.*?</tr>
+scrape_bad_match_1 = 9
+scrape_warn_match_1 = 8
+scrape_match_1 = 
+percent=100
+
+[service fndca_DCache_darkside]
+description=area has space, warn at 80%% bad at 90%%
+scrape_url = http://fndca3a.fnal.gov/cgi-bin/du_cgi.py
+multiline = True
+scrape_regex = (?s)<tr.*?>darkside<.*?>([ \d])\d*\.\d\d.*?</tr>
+scrape_bad_match_1 = 9
+scrape_warn_match_1 = 8
+scrape_match_1 = 
+percent=100
+
+[service fndca_DCache_des]
+description=area has space, warn at 80%% bad at 90%%
+scrape_url = http://fndca3a.fnal.gov/cgi-bin/du_cgi.py
+multiline = True
+scrape_regex = (?s)<tr.*?>des<.*?>([ \d])\d*\.\d\d.*?</tr>
+scrape_bad_match_1 = 9
+scrape_warn_match_1 = 8
+scrape_match_1 = 
+percent=100
+
+[service fndca_DCache_dune]
+description=area has space, warn at 80%% bad at 90%%
+scrape_url = http://fndca3a.fnal.gov/cgi-bin/du_cgi.py
+multiline = True
+scrape_regex = (?s)<tr.*?>dune<.*?>([ \d])\d*\.\d\d.*?</tr>
+scrape_bad_match_1 = 9
+scrape_warn_match_1 = 8
+scrape_match_1 = 
+percent=100
+
+[service fndca_DCache_lariat]
+description=area has space, warn at 80%% bad at 90%%
+scrape_url = http://fndca3a.fnal.gov/cgi-bin/du_cgi.py
+multiline = True
+scrape_regex = (?s)<tr.*?>lariat<.*?>([ \d])\d*\.\d\d.*?</tr>
+scrape_bad_match_1 = 9
+scrape_warn_match_1 = 8
+scrape_match_1 = 
+percent=100
+
+[service fndca_DCache_lbne]
+description=area has space, warn at 80%% bad at 90%%
+scrape_url = http://fndca3a.fnal.gov/cgi-bin/du_cgi.py
+multiline = True
+scrape_regex = (?s)<tr.*?>lbne<.*?>([ \d])\d*\.\d\d.*?</tr>
+scrape_bad_match_1 = 9
+scrape_warn_match_1 = 8
+scrape_match_1 = 
+percent=100
+
+[service fndca_DCache_minerva]
+description=area has space, warn at 80%% bad at 90%%
+scrape_url = http://fndca3a.fnal.gov/cgi-bin/du_cgi.py
+multiline = True
+scrape_regex = (?s)<tr.*?>minerva<.*?>([ \d])\d*\.\d\d.*?</tr>
+scrape_bad_match_1 = 9
+scrape_warn_match_1 = 8
+scrape_match_1 = 
+percent=100
+
+[service fndca_DCache_minos]
+description=area has space, warn at 80%% bad at 90%%
+scrape_url = http://fndca3a.fnal.gov/cgi-bin/du_cgi.py
+multiline = True
+scrape_regex = (?s)<tr.*?>minos<.*?>([ \d])\d*\.\d\d.*?</tr>
+scrape_bad_match_1 = 9
+scrape_warn_match_1 = 8
+scrape_match_1 = 
+percent=100
+
+[service fndca_DCache_mu2e]
+description=area has space, warn at 80%% bad at 90%%
+scrape_url = http://fndca3a.fnal.gov/cgi-bin/du_cgi.py
+multiline = True
+scrape_regex = (?s)<tr.*?>mu2e<.*?>([ \d])\d*\.\d\d.*?</tr>
+scrape_bad_match_1 = 9
+scrape_warn_match_1 = 8
+scrape_match_1 = 
+percent=100
+
+[service fndca_DCache_nova]
+description=area has space, warn at 80%% bad at 90%%
+scrape_url = http://fndca3a.fnal.gov/cgi-bin/du_cgi.py
+multiline = True
+scrape_regex = (?s)<tr.*?>nova<.*?>([ \d])\d*\.\d\d.*?</tr>
+scrape_bad_match_1 = 9
+scrape_warn_match_1 = 8
+scrape_match_1 = 
+percent=100
+
+[service fndca_DCache_sbnd]
+description=area has space, warn at 80%% bad at 90%%
+scrape_url = http://fndca3a.fnal.gov/cgi-bin/du_cgi.py
+multiline = True
+scrape_regex = (?s)<tr.*?>sbnd<.*?>([ \d])\d*\.\d\d.*?</tr>
+scrape_bad_match_1 = 9
+scrape_warn_match_1 = 8
+scrape_match_1 = 
+percent=100
+
+[service fndca_DCache_uboone]
+description=area has space, warn at 80%% bad at 90%%
+scrape_url = http://fndca3a.fnal.gov/cgi-bin/du_cgi.py
+multiline = True
+scrape_regex = (?s)<tr.*?>uboone<.*?>([ \d])\d*\.\d\d.*?</tr>
+scrape_bad_match_1 = 9
+scrape_warn_match_1 = 8
 scrape_match_1 = 
 percent=100
 
