--- a/monitoring_broker/status_scraper.cfg
+++ b/monitoring_broker/status_scraper.cfg
@@ -7,18 +7,17 @@ key=/home/poms/private/gsi/pomskey.pem
 description = Bundle of all services we watch 
 subservices = fndca_DCache
 
-
 [service fndca_DCache]
 description = All dcache persistent pools have room
-subservices = fndca_DCache_GM2 fndca_DCache_annie fndca_DCache_argoneut fndca_DCache_chips fndca_DCache_darkside fndca_DCache_des fndca_DCache_dune fndca_DCache_lariat fndca_DCache_lbne fndca_DCache_minerva fndca_DCache_minos fndca_DCache_mu2e fndca_DCache_nova fndca_DCache_sbnd fndca_DCache_uboone
-warnpercent = 5
+subservices = fndca_DCache_GM2 fndca_DCache_annie fndca_DCache_argoneut fndca_DCache_chips fndca_DCache_darkside fndca_DCache_des fndca_DCache_dune fndca_DCache_lariat fndca_DCache_minerva fndca_DCache_minos fndca_DCache_mu2e fndca_DCache_nova fndca_DCache_sbnd fndca_DCache_uboone
+warnpercent = 1
 percent = 90
 
 [service fndca_DCache_GM2]
 description=area has space, warn at 80%% bad at 90%%
 scrape_url = http://fndca3a.fnal.gov/cgi-bin/du_cgi.py
 multiline = True
-scrape_regex = (?s)<tr.*?>GM2<.*?>([ \d])\d*\.\d\d.*?</tr>
+scrape_regex = (?s)</tr>.<tr>.<td>.<a[^>]*>GM2<.*?> *(\d*)\d\.\d\d.*?</tr>
 scrape_bad_match_1 = 9
 scrape_warn_match_1 = 8
 scrape_match_1 = 
@@ -28,7 +27,7 @@ percent=100
 description=area has space, warn at 80%% bad at 90%%
 scrape_url = http://fndca3a.fnal.gov/cgi-bin/du_cgi.py
 multiline = True
-scrape_regex = (?s)<tr.*?>annie<.*?>([ \d])\d*\.\d\d.*?</tr>
+scrape_regex = (?s)</tr>.<tr>.<td>.<a[^>]*>annie<.*?> *(\d*)\d\.\d\d.*?</tr>
 scrape_bad_match_1 = 9
 scrape_warn_match_1 = 8
 scrape_match_1 = 
@@ -38,7 +37,7 @@ percent=100
 description=area has space, warn at 80%% bad at 90%%
 scrape_url = http://fndca3a.fnal.gov/cgi-bin/du_cgi.py
 multiline = True
-scrape_regex = (?s)<tr.*?>argoneut<.*?>([ \d])\d*\.\d\d.*?</tr>
+scrape_regex = (?s)</tr>.<tr>.<td>.<a[^>]*>argoneut<.*?> *(\d*)\d\.\d\d.*?</tr>
 scrape_bad_match_1 = 9
 scrape_warn_match_1 = 8
 scrape_match_1 = 
@@ -48,7 +47,8 @@ percent=100
 description=area has space, warn at 80%% bad at 90%%
 scrape_url = http://fndca3a.fnal.gov/cgi-bin/du_cgi.py
 multiline = True
-scrape_regex = (?s)<tr.*?>chips<.*?>([ \d])\d*\.\d\d.*?</tr>
+scrape_regex = (?s)</tr>.<tr>.<td>.<a[^>]*>chips<.*?> *(\d*)\d\.\d\d.*?</tr>
+scrape_regex = (?s)</tr>.<tr.*?>chips<.*?>([ \d])\d*\.\d\d.*?</tr>
 scrape_bad_match_1 = 9
 scrape_warn_match_1 = 8
 scrape_match_1 = 
@@ -58,7 +58,7 @@ percent=100
 description=area has space, warn at 80%% bad at 90%%
 scrape_url = http://fndca3a.fnal.gov/cgi-bin/du_cgi.py
 multiline = True
-scrape_regex = (?s)<tr.*?>darkside<.*?>([ \d])\d*\.\d\d.*?</tr>
+scrape_regex = (?s)</tr>.<tr>.<td>.<a[^>]*>darkside<.*?> *(\d*)\d\.\d\d.*?</tr>
 scrape_bad_match_1 = 9
 scrape_warn_match_1 = 8
 scrape_match_1 = 
@@ -68,7 +68,7 @@ percent=100
 description=area has space, warn at 80%% bad at 90%%
 scrape_url = http://fndca3a.fnal.gov/cgi-bin/du_cgi.py
 multiline = True
-scrape_regex = (?s)<tr.*?>des<.*?>([ \d])\d*\.\d\d.*?</tr>
+scrape_regex = (?s)</tr>.<tr>.<td>.<a[^>]*>des<.*?> *(\d*)\d\.\d\d.*?</tr>
 scrape_bad_match_1 = 9
 scrape_warn_match_1 = 8
 scrape_match_1 = 
@@ -78,7 +78,7 @@ percent=100
 description=area has space, warn at 80%% bad at 90%%
 scrape_url = http://fndca3a.fnal.gov/cgi-bin/du_cgi.py
 multiline = True
-scrape_regex = (?s)<tr.*?>dune<.*?>([ \d])\d*\.\d\d.*?</tr>
+scrape_regex = (?s)</tr>.<tr>.<td>.<a[^>]*>dune<.*?> *(\d*)\d\.\d\d.*?</tr>
 scrape_bad_match_1 = 9
 scrape_warn_match_1 = 8
 scrape_match_1 = 
@@ -88,27 +88,18 @@ percent=100
 description=area has space, warn at 80%% bad at 90%%
 scrape_url = http://fndca3a.fnal.gov/cgi-bin/du_cgi.py
 multiline = True
-scrape_regex = (?s)<tr.*?>lariat<.*?>([ \d])\d*\.\d\d.*?</tr>
+scrape_regex = (?s)</tr>.<tr>.<td>.<a[^>]*>lariat<.*?> *(\d*)\d\.\d\d.*?</tr>
 scrape_bad_match_1 = 9
 scrape_warn_match_1 = 8
 scrape_match_1 = 
 percent=100
 
-[service fndca_DCache_lbne]
-description=area has space, warn at 80%% bad at 90%%
-scrape_url = http://fndca3a.fnal.gov/cgi-bin/du_cgi.py
-multiline = True
-scrape_regex = (?s)<tr.*?>lbne<.*?>([ \d])\d*\.\d\d.*?</tr>
-scrape_bad_match_1 = 9
-scrape_warn_match_1 = 8
-scrape_match_1 = 
-percent=100
 
 [service fndca_DCache_minerva]
 description=area has space, warn at 80%% bad at 90%%
 scrape_url = http://fndca3a.fnal.gov/cgi-bin/du_cgi.py
 multiline = True
-scrape_regex = (?s)<tr.*?>minerva<.*?>([ \d])\d*\.\d\d.*?</tr>
+scrape_regex = (?s)</tr>.<tr>.<td>.<a[^>]*>minerva<.*?> *(\d*)\d\.\d\d.*?</tr>
 scrape_bad_match_1 = 9
 scrape_warn_match_1 = 8
 scrape_match_1 = 
@@ -118,7 +109,7 @@ percent=100
 description=area has space, warn at 80%% bad at 90%%
 scrape_url = http://fndca3a.fnal.gov/cgi-bin/du_cgi.py
 multiline = True
-scrape_regex = (?s)<tr.*?>minos<.*?>([ \d])\d*\.\d\d.*?</tr>
+scrape_regex = (?s)</tr>.<tr>.<td>.<a[^>]*>minos<.*?> *(\d*)\d\.\d\d.*?</tr>
 scrape_bad_match_1 = 9
 scrape_warn_match_1 = 8
 scrape_match_1 = 
@@ -128,7 +119,7 @@ percent=100
 description=area has space, warn at 80%% bad at 90%%
 scrape_url = http://fndca3a.fnal.gov/cgi-bin/du_cgi.py
 multiline = True
-scrape_regex = (?s)<tr.*?>mu2e<.*?>([ \d])\d*\.\d\d.*?</tr>
+scrape_regex = (?s)</tr>.<tr>.<td>.<a[^>]*>mu2e<.*?> *(\d*)\d\.\d\d.*?</tr>
 scrape_bad_match_1 = 9
 scrape_warn_match_1 = 8
 scrape_match_1 = 
@@ -138,7 +129,7 @@ percent=100
 description=area has space, warn at 80%% bad at 90%%
 scrape_url = http://fndca3a.fnal.gov/cgi-bin/du_cgi.py
 multiline = True
-scrape_regex = (?s)<tr.*?>nova<.*?>([ \d])\d*\.\d\d.*?</tr>
+scrape_regex = (?s)</tr>.<tr>.<td>.<a[^>]*>nova<.*?> *(\d*)\d\.\d\d.*?</tr>
 scrape_bad_match_1 = 9
 scrape_warn_match_1 = 8
 scrape_match_1 = 
@@ -148,7 +139,7 @@ percent=100
 description=area has space, warn at 80%% bad at 90%%
 scrape_url = http://fndca3a.fnal.gov/cgi-bin/du_cgi.py
 multiline = True
-scrape_regex = (?s)<tr.*?>sbnd<.*?>([ \d])\d*\.\d\d.*?</tr>
+scrape_regex = (?s)</tr>.<tr>.<td>.<a[^>]*>sbnd<.*?> *(\d*)\d\.\d\d.*?</tr>
 scrape_bad_match_1 = 9
 scrape_warn_match_1 = 8
 scrape_match_1 = 
@@ -158,7 +149,7 @@ percent=100
 description=area has space, warn at 80%% bad at 90%%
 scrape_url = http://fndca3a.fnal.gov/cgi-bin/du_cgi.py
 multiline = True
-scrape_regex = (?s)<tr.*?>uboone<.*?>([ \d])\d*\.\d\d.*?</tr>
+scrape_regex = (?s)</tr>.<tr>.<td>.<a[^>]*>uboone<.*?> *(\d*)\d\.\d\d.*?</tr>
 scrape_bad_match_1 = 9
 scrape_warn_match_1 = 8
 scrape_match_1 = 
