--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -31,6 +31,10 @@ ftsscandir="/home/poms/private/var/ftsscanner"
 cron_launches_logs_dir="/home/poms/private/logs/poms/launches/"
 request.show_tracebacks = True
 
+elasticsearch_base_url = "https://fifemon-es.fnal.gov"
+elasticsearch_cert = '/home/poms/private/gsi/pomscert.pem'
+elasticsearch_key = '/home/poms/private/gsi/pomskey.pem'
+
 pomspath='/poms'
 # only turn this on on fermicloud045 for now...
 #poms.launch_recovery_jobs = True
