--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,18 @@
+!.gitignore
+CVS
 .*
 *~
-!.gitignore
+.#*
 /build/*
-*log
-*pyc
+*.log
+*.pyc
+*.bck
+*.bak
+*.old
+*.out
+*.cache
+*orig
 
 tmp
+.DS_Store
+__pycache__
