use poms.model.poms_model instead of model.poms_model

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,13 +32,16 @@ tests_require =
    *.cfg 
    *.ini
 poms.webservice = 
+    *.ini
     templates/*.html 
     static/css/*.css 
     static/img/*png
     static/js/*.js
 
 [options.packages.find]
-include = poms.*
+include = 
+   poms
+   poms.*
 exclude = 
    poms.poms*
   
