Revert the files changed unintentionally

--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -1,19 +1,19 @@
 [global]
 	
 #log.screen = True
-log.rot_error_file = "/home/podstvkv/Workspace/Poms/logs/error_log"
-log.rot_access_file = "/home/podstvkv/Workspace/Poms/logs/access_log"
-log.pidfile = "/home/podstvkv/Workspace/Poms/logs/poms.pid"
+log.rot_error_file = "/home/poms/private/logs/poms/error_log"
+log.rot_access_file = "/home/poms/private/logs/poms/access_log"
+log.pidfile = "/home/poms/private/logs/poms/poms.pid"
 log.rot_maxBytes = 10000000
 log.rot_backupCount = 100
 log.screen = False
 	
 
 # on production box, just do localhost...
-###VP server.socket_host = '127.0.0.1'
+#server.socket_host = '127.0.0.1'
 server.socket_host = '0.0.0.0'
-server.socket_port = 9090
-server.thread_pool = 10
+server.socket_port = 8080
+server.thread_pool = 20
 
 # proxying through apache on port 443 now, so no need for this...
 #
@@ -24,17 +24,12 @@ server.thread_pool = 10
 db="pomsdev"
 dbuser="pomsdbs"
 dbhost="cspgsdev.fnal.gov"
-dbport="5437"
-
-#db="poms_snapshot"
-#dbuser="podstvkv"
-#dbhost="localhost"
-#dbport="5432"
-
-#sa_echo=True
+dbport=5437
 sa_echo=False
 
 ftsscandir="/home/poms/private/var/ftsscanner"
+cron_launches_logs_dir="/home/poms/private/logs/poms/launches/"
+request.show_tracebacks = True
 
 elasticsearch_base_url = "https://fifemon-es.fnal.gov"
 elasticsearch_cert = '/home/poms/private/gsi/pomscert.pem'
@@ -43,10 +38,11 @@ elasticsearch_key = '/home/poms/private/gsi/pomskey.pem'
 pomspath='/poms'
 # only turn this on on fermicloud045 for now...
 #poms.launch_recovery_jobs = True
-request.show_tracebacks = False
 
-pomspath='/poms_vmp'
-path='/poms_vmp'
+[smtp]
+server = "smtp.fnal.gov:25"
+sender = "poms@fnal.gov"
+debug = 0
 
 [/]
 tools.gzip.on: True
