--- a/setup.cfg
+++ b/setup.cfg
@@ -7,18 +7,18 @@ classifiers =
     Programming Language :: Python :: 2.7
 
 [options]
-#inlude_package_data = True
+#include_package_data = True
 packages = find:
 setup_requires = pytest
-zip_safe = Flase
+zip_safe = False
 install_requires = 
     psycopg2
     cherrypy
     sqlalchemy
-    jinja
+    jinja2
     crontab
     futures
-    request
+    requests
     repose
     paste
     prometheus_client
