fixes for fifemon_reader, config

--- a/monitoring_broker/fifemon_reader.cfg
+++ b/monitoring_broker/fifemon_reader.cfg
@@ -35,58 +35,58 @@ subservices= fifemon_nova_samweb fifemon_minerva_samweb fifemon_mu2e_samweb fife
 
 [service fifemon_fifebatch1_exited]
 description = Jobs are completing on fifebatch1 (threshold 2)
-source_url=https://fifemon.fnal.gov/monitor/dashboard/db/fifebatch
+source_url=https://fifemon.fnal.gov/monitor/dashboard/db/schedd-statistics?var-schedd=fifebatch1
 path=fifebatch.schedds.fifebatch1_fnal_gov.RecentJobsExited
 above=2
 
 [service fifemon_fifebatch2_exited]
 description = Jobs are completing on fifebatch2 (threshold 2)
-source_url=https://fifemon.fnal.gov/monitor/dashboard/db/fifebatch
+source_url=https://fifemon.fnal.gov/monitor/dashboard/db/schedd-statistics?var-schedd=fifebatch2
 path=fifebatch.schedds.fifebatch2_fnal_gov.RecentJobsExited
 above=2
 
 [service fifemon_nova_samweb]
-description=SAMWeb status for nova, 
-source_url=https://fifemon.fnal.gov/monitor/dashboard/db/experiment-overview
+description=SAMWeb HTTP Status (should be 200)  for nova, 
+source_url=https://fifemon.fnal.gov/monitor/dashboard/db/sam-by-experiment?var-experiment=nova
 path=urls.nova-prd-samweb-nova.http-code
 below=201
 
 [service fifemon_minerva_samweb]
-description=SAMWeb status for minerva, 
-source_url=https://fifemon.fnal.gov/monitor/dashboard/db/experiment-overview
+description=SAMWeb HTTP Status (should be 200)  for minerva, 
+source_url=https://fifemon.fnal.gov/monitor/dashboard/db/sam-by-experiment?var-experiment=minerva
 path=urls.minerva-prd-samweb-minerva.http-code
 below=201
 
 
 [service fifemon_mu2e_samweb]
-description=SAMWeb status for mu2e, 
-source_url=https://fifemon.fnal.gov/monitor/dashboard/db/experiment-overview
+description=SAMWeb HTTP Status (should be 200)  for mu2e, 
+source_url=https://fifemon.fnal.gov/monitor/dashboard/db/sam-by-experiment?var-experiment=mu2e
 path=urls.mu-prd-samweb-mu2e-http-code
 below=201
 
 
 [service fifemon_dune_samweb]
-description=SAMWeb status for dune, 
-source_url=https://fifemon.fnal.gov/monitor/dashboard/db/experiment-overview
+description=SAMWeb HTTP Status (should be 200)  for dune, 
+source_url=https://fifemon.fnal.gov/monitor/dashboard/db/sam-by-experiment?var-experiment=dune
 path=urls.lbne-prd-samweb-lbne.http-code
 below=201
 
 [service fifemon_lar1nd_samweb]
-description=SAMWeb status for lar1nd, 
-source_url=https://fifemon.fnal.gov/monitor/dashboard/db/experiment-overview
+description=SAMWeb HTTP Status (should be 200)  for lar1nd, 
+source_url=https://fifemon.fnal.gov/monitor/dashboard/db/sam-by-experiment?var-experiment=lar1nd
 path=urls.lar1nd-prd-samweb-lar1nd.http-code
 below=201
 
 [service fifemon_seaquest_samweb]
-description=SAMWeb status for seaquest, 
-source_url=https://fifemon.fnal.gov/monitor/dashboard/db/experiment-overview
+description=SAMWeb HTTP Status (should be 200)  for seaquest, 
+source_url=https://fifemon.fnal.gov/monitor/dashboard/db/sam-by-experiment?var-experiment=seaquest
 path=urls.seaquest-prd-samweb-seaquest.http-code
 below=201
 
 
 [service fifemon_uboone_samweb]
-description=SAMWeb status for uboone, 
-source_url=https://fifemon.fnal.gov/monitor/dashboard/db/experiment-overview
+description=SAMWeb HTTP Status (should be 200)  for uboone, 
+source_url=https://fifemon.fnal.gov/monitor/dashboard/db/sam-by-experiment?var-experiment=uboone
 path=urls.uboone-prd-samweb-uboone.http-code
 below=201
 
