Interim commit. Not all the changes should be merged!

--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -1,18 +1,18 @@
 [global]
 	
 #log.screen = True
-log.rot_error_file = "/home/poms/private/logs/poms/error_log"
-log.rot_access_file = "/home/poms/private/logs/poms/access_log"
-log.pidfile = "/home/poms/private/logs/poms/poms.pid"
-log.rot_maxBytes = 10000000
-log.rot_backupCount = 100
-log.screen = False
+#log.rot_error_file = "/home/poms/private/logs/poms/error_log"
+#log.rot_access_file = "/home/poms/private/logs/poms/access_log"
+log.pidfile = "/tmp/poms.pid"
+#log.rot_maxBytes = 10000000
+#log.rot_backupCount = 100
+#log.screen = False
 	
 
 # on production box, just do localhost...
 #server.socket_host = '127.0.0.1'
 server.socket_host = '0.0.0.0'
-server.socket_port = 8080
+server.socket_port = 9090
 server.thread_pool = 20
 
 db="pomsdev"
@@ -29,7 +29,8 @@ elasticsearch_base_url = "https://fifemon-es.fnal.gov"
 elasticsearch_cert = '/home/poms/private/gsi/pomscert.pem'
 elasticsearch_key = '/home/poms/private/gsi/pomskey.pem'
 
-pomspath='/poms'
+pomspath='/poms_vmp'
+path='/poms_vmp'
 # only turn this on on fermicloud045 for now...
 #poms.launch_recovery_jobs = True
 
