--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -15,6 +15,8 @@ server.socket_host = '0.0.0.0'
 server.socket_port = 8080
 server.thread_pool = 20
 
+tools.sessions.storage_path = '/tmp/poms_sessions'
+
 db="pomsdev"
 dbuser="pomsdbs"
 dbhost="cspgsdev.fnal.gov"
@@ -40,4 +42,9 @@ debug = 0
 
 [/]
 tools.gzip.on: True
+
+[/static]
+tools.staticdir.on = True
+# can we make this package relative?!?
+tools.staticdir.dir = '/scratch/mengel/co/cd/poms/webservice/static'
 
