Added support for log levels - default is INFO.

--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -35,7 +35,7 @@ dbport=5437
 
 [POMS]
 ftsscandir="/home/poms/private/var/ftsscanner"
-
+log_level="INFO"      #CRITICAL, ERROR, WARNING, INFO (default), DEBUG, NOTSET
 
 [smtp]
 server = "smtp.fnal.gov:25"
