--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -29,8 +29,8 @@ elasticsearch_key = %(HOME)s + '/private/gsi/pomskey.pem'
 [Databases]
 db="pomsdev"
 dbuser="pomsdbs"
-dbhost="cspgsdev.fnal.gov"
-dbport=5437
+dbhost="ifdbdev.fnal.gov"
+dbport=5447
 
 
 [POMS]
