make some variant of env hacked config available in tests, too

--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -22,8 +22,8 @@ pomspath='/poms'
 cron_launches_logs_dir=%(HOME)s + "/private/logs/poms/launches/"
 
 elasticsearch_base_url = "https://fifemon-es.fnal.gov"
-elasticsearch_cert = %(HOME)s + '/private/gsi/pomscert.pem'
-elasticsearch_key = %(HOME)s + '/private/gsi/pomskey.pem'
+elasticsearch_cert = %(HOME)s + "/.test_proxy"
+elasticsearch_key = %(HOME)s + "/.test_proxy"
 
 
 [Databases]
