test fixup, try to avoid excessive dimension query lookup

--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -34,7 +34,7 @@ dbport=5447
 
 
 [POMS]
-log_level="INFO"      #CRITICAL, ERROR, WARNING, INFO (default), DEBUG, NOTSET
+log_level="DEBUG"      #CRITICAL, ERROR, WARNING, INFO (default), DEBUG, NOTSET
 ftsscandir= %(HOME)s + "private/var/ftsscanner"
 
 [smtp]
