fixup some failed tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,12 +4,12 @@ version = v2_0_0_pre
 description = Production Operations Management Service
 license = BSD 3-Clause License
 classifiers = 
-    Programming Language :: Python :: 2.7
+	Programming Language :: Python :: 2.7
 
 [options]
 #include_package_data = True
 packages = find:
-setup_requires = pytest
+setup_requires = pytest-runner
 zip_safe = False
 install_requires = 
     psycopg2
@@ -28,8 +28,8 @@ tests_require =
     mock 
 
 [options.package_data]
-* = 
-   *.cfg 
+all = 
+   *.cfg
    *.ini
 poms.webservice = 
     *.ini
@@ -39,7 +39,7 @@ poms.webservice =
     static/js/*.js
 
 [options.packages.find]
-include = 
+include =
    poms
    poms.*
 exclude = 
@@ -48,3 +48,6 @@ exclude =
 
 [aliases]
 test=pytest
+
+[tool:pytest]
+addopts=-c tests/pytest.ini test
