--- a/webservice/poms.ini
+++ b/webservice/poms.ini
@@ -49,7 +49,7 @@ tools.psess.on: True
 tools.sessions.on: True
 tools.sessions.timeout: 60
 tools.sessions.storage_type: 'file'
-tools.sessions.locking: 'early'          ; IMPORTANT!
+tools.sessions.locking: 'early'
 tools.sessions.storage_path: '/tmp/poms_sessions'
 
 [/static]
