--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,8 @@ install_requires =
     repoze.errorlog
     paste
     prometheus_client
+    dogpile.cache
+    dowser
 
 tests_require = 
     pytest 
